--- a/EcommerceAppKotlin/app/src/main/res/layout/activity_main.xml
+++ b/EcommerceAppKotlin/app/src/main/res/layout/activity_main.xml
@@ -6,41 +6,19 @@
                                              android:layout_height="match_parent"
                                              tools:context=".MainActivity">
     <TextView
-            android:text="Enter Product Name:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2" android:layout_marginTop="25dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/edtProduct"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/txtHelloWorld" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="356dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="176dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="356dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="176dp"/>
     <Button
-            android:text="Add Product"
+            android:text="Get Data From Server"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnAdd" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/edtProduct" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/btnGetData" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtHelloWorld" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtGetProduct" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnAdd" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
-    <Button
-            android:text="Get Product"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnGetProduct" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtGetProduct"/>
 </android.support.constraint.ConstraintLayout>
