--- a/EcommerceAppKotlin/app/src/main/res/layout/rv_row.xml
+++ b/EcommerceAppKotlin/app/src/main/res/layout/rv_row.xml
@@ -2,13 +2,44 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="wrap_content">
 
     <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
+            android:id="@+id/rv_row_productImage"
+            android:layout_margin="20dp"
+    />
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="id"
+            android:textSize="30sp"
+            android:layout_toRightOf="@+id/rv_row_productImage"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/rv_row_pID"
+    />
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textSize="30sp"
+            android:layout_toRightOf="@+id/rv_row_productImage"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/rv_row_pName"
+            android:layout_below="@+id/rv_row_pID"
+    />
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textSize="30sp"
+            android:layout_toRightOf="@+id/rv_row_productImage"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/rv_row_pPrice"
+            android:layout_below="@+id/rv_row_pName"
     />
 
 </RelativeLayout>
