RV Finisihin Touches

--- a/EcommerceAppKotlin/app/src/main/res/layout/activity_rv.xml
+++ b/EcommerceAppKotlin/app/src/main/res/layout/activity_rv.xml
@@ -8,11 +8,12 @@
         tools:context=".RVActivity">
 
     <android.support.v7.widget.RecyclerView
-            android:id="recyclerView"
+            android:id="@+id/recyclerView"
             android:layout_width="395dp"
             android:layout_height="715dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            android:layout_margin="10dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
