--- a/EcommerceAppKotlin2/app/src/main/res/layout/activity_fetch_eproducts.xml
+++ b/EcommerceAppKotlin2/app/src/main/res/layout/activity_fetch_eproducts.xml
@@ -5,19 +5,19 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HomeScreen"
+        tools:context=".FetchEProductsActivity"
         android:orientation="vertical">
 
-
     <TextView
-            android:text="Please Choose a Brand"
-            android:textColor="@android:color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
             android:textSize="20sp"
-            android:layout_margin="10dp"
             android:gravity="center"
+            android:layout_margin="10dp"
+            android:textColor="@android:color/black"
+    />
+    <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/textView"/>
-    <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/brandsListView"/>
+            android:layout_height="match_parent" android:id="@+id/productsRV"/>
 </LinearLayout>
