--- a/EcommerceAppKotlin2/app/src/main/res/layout/activity_fetch_eproducts.xml
+++ b/EcommerceAppKotlin2/app/src/main/res/layout/activity_fetch_eproducts.xml
@@ -11,7 +11,7 @@
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2"
+            android:id="@+id/txtBrandName"
             android:textSize="20sp"
             android:gravity="center"
             android:layout_margin="10dp"
