--- a/EcommerceAppKotlin2/app/src/main/res/layout/e_product_row.xml
+++ b/EcommerceAppKotlin2/app/src/main/res/layout/e_product_row.xml
@@ -3,7 +3,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/border"
+        android:layout_margin="5dp">
 
     <ImageView
             android:layout_width="200dp"
@@ -16,25 +18,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_margin="10dp">
+            android:layout_margin="20dp">
         <TextView
                 android:text="Id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtId"
-                android:layout_weight="1" android:layout_margin="5dp"/>
+                android:layout_weight="1"
+                android:layout_margin="0dp"
+                android:textColor="@android:color/black"/>
         <TextView
                 android:text="Name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtName"
-                android:layout_weight="1" android:layout_margin="5dp"/>
+                android:layout_weight="1"
+                android:layout_margin="0dp"
+                android:textColor="@android:color/black"/>
         <TextView
                 android:text="Price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtPrice"
-                android:layout_weight="1" android:layout_margin="5dp"/>
+                android:layout_weight="1"
+                android:layout_margin="0dp"
+                android:textColor="@android:color/black"/>
     </LinearLayout>
 
     <ImageView
