--- a/CekOngkir/app/src/main/res/layout/activity_main.xml
+++ b/CekOngkir/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,54 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        android:background="@drawable/bg_cekongkir">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp">
+
+        <EditText
+                android:id="@+id/editOrigin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Kota Asal"
+                android:textColorHint="@color/colorWhite"
+                android:textColor="@color/colorWhite"/>
+
+        <EditText
+                android:id="@+id/editDestination"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Kota Tujuan"
+                android:layout_marginTop="5dp"
+                android:textColorHint="@color/colorWhite"
+                android:textColor="@color/colorWhite"/>
+        <Button
+                android:text="Cek Ongkir"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:background="@color/colorPrimaryDark"
+                android:id="@+id/btnCekOngkir"
+                android:textColor="@color/colorWhite"/>
+
+        <ProgressBar
+                android:visibility="gone"
+                android:id="@+id/progressBarCekOngkir"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"/>
+
+        <ListView
+                android:id="@+id/listCekOngkir"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></ListView>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
