set adapat activity city

--- a/CekOngkir/app/src/main/res/layout/activity_city.xml
+++ b/CekOngkir/app/src/main/res/layout/activity_city.xml
@@ -30,7 +30,7 @@
                 app:type="folding_circles"/>
 
         <ListView
-                android:id="@+id/listKota"
+                android:id="@+id/listView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
