--- a/CekOngkir/app/src/main/res/layout/adapter_city.xml
+++ b/CekOngkir/app/src/main/res/layout/adapter_city.xml
@@ -4,9 +4,11 @@
                 android:layout_height="match_parent" android:padding="5dp">
 
     <TextView
+            android:visibility="gone"
             android:id="@+id/txtId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
     <TextView
             android:id="@+id/txtName"
             android:paddingTop="5dp"
