--- a/EcommerceAppKotlin2/app/src/main/res/layout/activity_cart_products.xml
+++ b/EcommerceAppKotlin2/app/src/main/res/layout/activity_cart_products.xml
@@ -7,4 +7,26 @@
         android:layout_height="match_parent"
         tools:context=".CartProductsActivity">
 
+    <TextView
+            android:text="Temporary Orders"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:textSize="28sp"/>
+    <ListView
+            android:layout_width="368dp"
+            android:layout_height="449dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/cartProductsListView"/>
 </android.support.constraint.ConstraintLayout>
