--- a/CekOngkir/app/src/main/res/layout/adapter_main.xml
+++ b/CekOngkir/app/src/main/res/layout/adapter_main.xml
@@ -4,7 +4,7 @@
                 android:layout_height="match_parent"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/colorPrimaryDark">
+                android:background="@android:color/transparent">
 
     <LinearLayout
             android:layout_width="wrap_content"
