--- a/CekOngkir/app/src/main/res/layout/activity_city.xml
+++ b/CekOngkir/app/src/main/res/layout/activity_city.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,16 +10,18 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
+            android:layout_height="match_parent"
+            android:layout_above="@+id/adView"
+            android:padding="10dp">
 
         <EditText
                 android:id="@+id/pencarianKota"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:padding="5dp"
                 android:hint="Pencarian"/>
+
 
         <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
                 android:id="@+id/google_progress"
@@ -27,15 +29,25 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center"
-                app:type="folding_circles"/>
+                app:type="nexus_rotation_cross"/>
 
         <ListView
                 android:id="@+id/listView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-        </ListView>
+                android:layout_height="wrap_content"
+                android:dividerHeight="0dp"
+                android:divider="@android:color/transparent"
+                android:scrollbars="none"/>
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <!--<com.google.android.gms.ads.AdView-->
+            <!--android:id="@+id/adView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:adSize="SMART_BANNER"-->
+            <!--app:adUnitId="@string/banner_ad_unit_id"-->
+            <!--android:layout_alignParentBottom="true">-->
+    <!--</com.google.android.gms.ads.AdView>-->
+
+</RelativeLayout>
