--- a/OnlineStoreKotlin/app/src/main/res/layout/activity_sign_up_layout.xml
+++ b/OnlineStoreKotlin/app/src/main/res/layout/activity_sign_up_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".SignUpLayout">
 
     <LinearLayout
             android:layout_width="330dp"
@@ -12,46 +13,6 @@
             android:layout_centerInParent="true"
             android:orientation="vertical"
             android:padding="@dimen/spacing_large">
-
-        <View
-                android:layout_width="0dp"
-                android:layout_height="@dimen/spacing_middle" />
-
-        <ImageView
-                android:id="@+id/imgLogin"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/logo_small"
-                android:tint="@color/green_300" />
-
-        <View
-                android:layout_width="0dp"
-                android:layout_height="@dimen/spacing_large" />
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/spacing_medium"
-                android:text="Welcome to SewaBarangX"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:textColor="@color/green_300"
-                android:textStyle="bold" />
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/spacing_medium"
-                android:text="Login to continue"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
-                android:textColor="@color/blue_grey_300" />
-
-        <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
 
         <TextView
                 android:layout_width="wrap_content"
@@ -62,7 +23,7 @@
                 android:textColor="@color/blue_grey_200" />
 
         <android.support.design.widget.TextInputEditText
-                android:id="@+id/edtLoginEmail"
+                android:id="@+id/edtSignUpEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="-4dp"
@@ -74,9 +35,26 @@
                 android:textColor="@color/blue_grey_800"
                 android:theme="@style/EditText.Green" />
 
-        <View
-                android:layout_width="0dp"
-                android:layout_height="@dimen/spacing_mlarge" />
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="USERNAME"
+                android:textAlignment="center"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textColor="@color/blue_grey_200" />
+
+        <android.support.design.widget.TextInputEditText
+                android:id="@+id/edtSignUpUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="-4dp"
+                android:layout_marginRight="-4dp"
+                android:inputType="textEmailAddress"
+                android:maxLength="50"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@color/blue_grey_800"
+                android:theme="@style/EditText.Green" />
 
         <TextView
                 android:layout_width="wrap_content"
@@ -87,7 +65,7 @@
                 android:textColor="@color/blue_grey_200" />
 
         <android.support.design.widget.TextInputEditText
-                android:id="@+id/edtLoginPassword"
+                android:id="@+id/edtSignUpPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="-4dp"
@@ -99,29 +77,33 @@
                 android:textColor="@color/blue_grey_800"
                 android:theme="@style/EditText.Green" />
 
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CONFIRM PASSWORD"
+                android:textAlignment="center"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textColor="@color/blue_grey_200" />
+
+        <android.support.design.widget.TextInputEditText
+                android:id="@+id/edtSignUpConfirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="-4dp"
+                android:layout_marginRight="-4dp"
+                android:inputType="textPassword"
+                android:maxLength="50"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@color/blue_grey_800"
+                android:theme="@style/EditText.Green" />
 
         <View
                 android:layout_width="0dp"
                 android:layout_height="@dimen/spacing_mxlarge" />
 
         <Button
-                android:id="@+id/btnLogin"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_marginLeft="-4dp"
-                android:layout_marginRight="-4dp"
-                android:background="@drawable/btn_rounded_green_300"
-                android:text="L O G I N"
-                android:textAllCaps="false"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
-
-        <View
-                android:layout_width="0dp"
-                android:layout_height="@dimen/spacing_medium" />
-
-        <Button
-                android:id="@+id/btnLoginSignUp"
+                android:id="@+id/btnSignUp"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:layout_marginLeft="-4dp"
@@ -135,9 +117,24 @@
 
         <View
                 android:layout_width="0dp"
+                android:layout_height="@dimen/spacing_medium" />
+
+        <Button
+                android:id="@+id/btnSignUpLogin"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginLeft="-4dp"
+                android:layout_marginRight="-4dp"
+                android:background="@drawable/btn_rounded_green_300"
+                android:text="L O G I N"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+
+        <View
+                android:layout_width="0dp"
                 android:layout_height="@dimen/spacing_xlarge" />
 
     </LinearLayout>
-
 
 </RelativeLayout>
