--- a/OnlineStoreKotlin/app/src/main/res/layout/activity_home_screen.xml
+++ b/OnlineStoreKotlin/app/src/main/res/layout/activity_home_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
+        android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,4 +8,18 @@
         android:layout_height="match_parent"
         tools:context=".HomeScreen">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+            android:text="Please Choose a Brand"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"/>
+    <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/brandsListView"/>
+
+</LinearLayout>
