--- a/OnlineStoreKotlin/app/src/main/res/layout/activity_fetch_eproducts.xml
+++ b/OnlineStoreKotlin/app/src/main/res/layout/activity_fetch_eproducts.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HomeScreen">
+        tools:context=".FetchEProductsActivity"
+        android:orientation="vertical">
 
     <TextView
-            android:text="Please Choose a Brand"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:layout_margin="10dp"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"/>
-    <ListView
+            android:id="@+id/txtBrandName"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            android:textColor="@android:color/black"
+    />
+    <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/brandsListView"/>
+            android:id="@+id/productsRV"/>
 
 </LinearLayout>
