fetch banner image

--- a/AndroidEcommerce/app/src/main/res/layout/content_home.xml
+++ b/AndroidEcommerce/app/src/main/res/layout/content_home.xml
@@ -7,5 +7,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".HomeActivity"
     tools:showIn="@layout/app_bar_home">
+    
+    <com.daimajia.slider.library.SliderLayout
+        android:id="@+id/slider"
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+    </com.daimajia.slider.library.SliderLayout>
 
 </android.support.constraint.ConstraintLayout>
